# solstice-tools-xgenmanager

./: .travis.yml  MANIFEST.in  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  solstice.html  solstice.tools.html  solstice.tools.xgenmanager.core.html  solstice.tools.xgenmanager.core.xgenmanager.html  solstice.tools.xgenmanager.html  solstice.tools.xgenmanager.widgets.html  solstice.tools.xgenmanager.widgets.xgenmanager.html  solstice.tools.xgenmanager.xgenmanager.html
_sources/: solstice.rst.txt  solstice.tools.rst.txt  solstice.tools.xgenmanager.core.rst.txt  solstice.tools.xgenmanager.core.xgenmanager.rst.txt  solstice.tools.xgenmanager.rst.txt  solstice.tools.xgenmanager.widgets.rst.txt  solstice.tools.xgenmanager.widgets.xgenmanager.rst.txt  solstice.tools.xgenmanager.xgenmanager.rst.txt
solstice/tools/xgenmanager/: __init__.py  __logging__.ini  __version__.py  xgenmanager.py
solstice/tools/xgenmanager/resources/uis/: xgenmanager.ui
source/solstice/tools/: __init__.py
source/solstice/tools/xgenmanager/: __init__.py  __logging__.ini  xgenmanager.py
