[metadata]
name = artellapipe-tools-xgenmanager
description = Tool to manage XGen workflow in Solstice
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 0.0.1
license = MIT
license_file = LICENSE
author = Enrique Velasco
author_email = enriquevelmai@hotmail.com
url = https://github.com/Solstice-Short-Film/solstice-tools-xgenmanager

[options]
zip_safe = false
include_package_data = true
package_dir=
    =source
packages=find:
install_requires=
    artellapipe-core

[options.packages.find]
where=source

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1